--- a/css/style.css
+++ b/css/style.css
@@ -14,3 +14,12 @@ img {
 a {
   text-decoration: none;
 }
+.circle {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  border: 1px solid crimson;
+  position: absolute;
+  transform: translate(-50%, -25%);
+  /* transition: all linear 0.3s; */
+}
