--- a/css/style.css
+++ b/css/style.css
@@ -18,8 +18,25 @@ a {
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  border: 1px solid crimson;
+  border: 1px solid #0652DD;
   position: absolute;
   transform: translate(-50%, -25%);
-  /* transition: all linear 0.3s; */
+  animation: blink 0.3s ease-in 10ms infinite;
+}
+@keyframes blink {
+  0% {
+    border: 2px solid #ea2027;
+  }
+  25% {
+    border: 3px solid #2ecc71;
+  }
+  50% {
+    border: 3px solid #f1c40f;
+  }
+  75% {
+    border: 3px solid #9980fa;
+  }
+  100% {
+    border: 3px solid #e74c3c;
+  }
 }
